ansible/roles/default/files/rules.v4
*filter
:INPUT ACCEPT [0:102354]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [92952:20764374]

## Liberando IPs internos
-A INPUT -i eth0 -s 10.0.0.0/16 -j ACCEPT

## Incrementar o firewall contrar ataques
-A INPUT -i eth0 -m conntrack --ctstate INVALID -j DROP

## Web Services
-A INPUT -i eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p icmp -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp --dport 443 -j ACCEPT

## Se necessario ativar os logs
#-A INPUT -i eth0 -j LOG

# Block all
-A INPUT -i eth0 -j DROP

COMMIT
#
